# learning-c

./: CMakeLists.txt  calculator.c  main  main.c  pc  pointercalculator.c
Projects/Calculator/: pointerswap.c
Projects/Numbers/: numbers  numbers.c
